Refactor tenant mapping (#257)
* Parametrized tenant mapping